Bug 312802 - Marble sporadically jumps to the sun's current position
Summary: Marble sporadically jumps to the sun's current position
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.6 (KDE 4.11)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Bernhard Beschow
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-07 09:47 UTC by Bernhard Beschow
Modified: 2013-04-07 07:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard Beschow 2013-01-07 09:47:24 UTC
It happens sporadically, presumably when browsing the map.

Reproducible: Sometimes

Steps to Reproduce:
Not known yet.
Actual Results:  
Marble suddenly jumps to the sun's current (zenith) position.

Expected Results:  
Marble shouldn't jump as long as I don't track the sun's position.
Comment 1 Bernhard Beschow 2013-01-07 12:38:17 UTC
Git commit f0ae804908d80faea6b760638c259cc37791df6a by Bernhard Beschow.
Committed on 07/01/2013 at 13:05.
Pushed by beschow into branch 'master'.

initialize solar attributes

* probably also fixes random pan lock on startup

M  +16   -14   src/lib/MarbleMap.cpp

http://commits.kde.org/marble/f0ae804908d80faea6b760638c259cc37791df6a