initialize solar attributes

* probably also fixes random pan lock on startup

BUG: 312802